--- a/Frontend/src/app/cart/cart.component.html
+++ b/Frontend/src/app/cart/cart.component.html
@@ -1,1 +1,60 @@
-<p>cart works!</p>
+<div class="container">
+    <h1 class="mt-5 mb-3">Cart (4)</h1>
+    <div class="row">
+        <div class="col-lg-8">
+            <!-- ADDRESS BOX -->
+            <div class="card shadow-sm mb-4">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-10">
+                            <h3 class="mb-3">Jennie Kim</h3>
+                            <p>Jalan Ganesha No.10 Bandung, Jawa Barat 19234</p>
+                        </div>
+                        <div class="col-md-2">
+                            <button type="button" class="btn btn-primary">Change Address</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="cart-items">
+                <h2>Cart Items</h2>
+                <!-- BOX FOR EACH ITEM -->
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-2">
+                                <img src="https://via.placeholder.com/150" alt="Product Image" class="img-thumbnail">
+                            </div>
+                            <div class="col-md-10">
+                                <h3 class="mb-2">Samsung</h3>
+                                <p class="mb-2">Television</p>
+                                <p class="mb-2">98" Class QLED 4K Q80C</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div>
+                                        <label for="quantity">Quantity</label>
+                                        <input type="number" class="form-control" id="quantity" placeholder="1">
+                                    </div>
+                                    <h4 class="text-right">Rp. 100.000</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-4">
+            <div class="order-detail card">
+                <div class="card-body">
+                    <h2>Order Summary</h2>
+                    <p class="mb-2">Subtotal: Rp. 100.000</p>
+                    <p class="mb-2">Shipping: Rp. 10.000</p>
+                    <hr> <!-- Added border to separate the total price -->
+                    <p class="mb-4">Total: Rp. 110.000</p>
+                    <button type="button" class="btn btn-primary btn-lg btn-block">Checkout</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
