--- a/Frontend/src/app/cart/cart.component.html
+++ b/Frontend/src/app/cart/cart.component.html
@@ -52,7 +52,7 @@
                     <p class="mb-2">Shipping: Rp. 10.000</p>
                     <hr> <!-- Added border to separate the total price -->
                     <p class="mb-4">Total: Rp. 110.000</p>
-                    <button type="button" class="btn btn-primary btn-lg btn-block">Checkout</button>
+                    <button type="button" class="btn btn-primary btn-lg btn-block" (click)="checkout()">Checkout</button>
                 </div>
             </div>
         </div>
