--- a/Frontend/src/app/navbar/navbar.component.html
+++ b/Frontend/src/app/navbar/navbar.component.html
@@ -12,5 +12,8 @@
         <li class="nav-item">
             <a class="nav-link" routerLink="/cart">Cart</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/orders">My Orders</a>
+        </li>
     </ul>
 </nav>
