--- a/Frontend/src/app/cart/cart.component.html
+++ b/Frontend/src/app/cart/cart.component.html
@@ -20,27 +20,29 @@
             <div class="cart-items">
                 <h2>Cart Items</h2>
                 <!-- BOX FOR EACH ITEM -->
-                <div class="card mb-4">
+            
+                <div *ngFor="let item of cartItems" class="card mb-4">
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-2">
-                                <img src="https://via.placeholder.com/150" alt="Product Image" class="img-thumbnail">
+                                <img [src]="item.Product.productImage" alt="Product Image" class="img-thumbnail">
                             </div>
                             <div class="col-md-10">
-                                <h3 class="mb-2">Samsung</h3>
-                                <p class="mb-2">Television</p>
-                                <p class="mb-2">98" Class QLED 4K Q80C</p>
+                                <h3 class="mb-2">{{ item.Product.productName }}</h3>
+                                <p class="mb-2">{{ item.Product.productDescription }}</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div>
                                         <label for="quantity">Quantity</label>
-                                        <input type="number" class="form-control" id="quantity" placeholder="1">
+                                        <input type="number" class="form-control" id="quantity" [value]="item.quantity">
                                     </div>
-                                    <h4 class="text-right">Rp. 100.000</h4>
+                                    <h4 class="text-right">{{ 'Rp. ' + item.price }}</h4>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
+                    </div>  
+                </div> 
+
+
             </div>
         </div>
 
@@ -48,10 +50,9 @@
             <div class="order-detail card">
                 <div class="card-body">
                     <h2>Order Summary</h2>
-                    <p class="mb-2">Subtotal: Rp. 100.000</p>
-                    <p class="mb-2">Shipping: Rp. 10.000</p>
-                    <hr> <!-- Added border to separate the total price -->
-                    <p class="mb-4">Total: Rp. 110.000</p>
+                    
+                    <hr>
+                    <p class="mb-4">Total: {{'Rp. ' + totalPrice}}</p>
                     <button type="button" class="btn btn-primary btn-lg btn-block" (click)="checkout()">Checkout</button>
                 </div>
             </div>
