--- a/Frontend/src/app/navbar/navbar.component.html
+++ b/Frontend/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-dark bg-dark">
     <ul class="nav">
         <li class="nav-item">
-            <a class="nav-link" routerLink="/home">Home</a>
+            <a class="nav-link" routerLink="/products">Home</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" routerLink="/about">About</a>
