--- a/Frontend/src/app/product/product.component.html
+++ b/Frontend/src/app/product/product.component.html
@@ -4,7 +4,7 @@
       <h5 class="card-title">{{ product.productName }}</h5>
       <p class="card-text">{{ product.productDescription }}</p>
       <p class="card-text">Price: ${{ product.price }}</p>
-      <!-- <button (click)="addToCart(product)" class="btn btn-primary">Add to Cart</button> -->
+      <button (click)="addToCart(product.id)" class="btn btn-primary">Add to Cart</button>
     </div>
   </div>
   
