--- a/Frontend/src/app/cart/cart.component.html
+++ b/Frontend/src/app/cart/cart.component.html
@@ -8,7 +8,7 @@
                     <div class="row">
                         <div class="col-md-10">
                             <h3 class="mb-3">Jennie Kim</h3>
-                            <p>Jalan Ganesha No.10 Bandung, Jawa Barat 19234</p>
+                            <p>{{ shippingAddress }}</p>
                         </div>
                         <div class="col-md-2">
                             <button type="button" class="btn btn-primary">Change Address</button>
@@ -33,7 +33,11 @@
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div>
                                         <label for="quantity">Quantity</label>
-                                        <input type="number" class="form-control" id="quantity" [value]="item.quantity">
+                                        <div class="input-group">
+                                            <button class="btn btn-outline-secondary" (click)="decreaseQuantity(item)">-</button>
+                                            <span class="quantity-text">{{ item.quantity }}</span>
+                                            <button class="btn btn-outline-secondary" (click)="increaseQuantity(item)">+</button>
+                                        </div>
                                     </div>
                                     <h4 class="text-right">{{ 'Rp. ' + item.price }}</h4>
                                 </div>
