--- a/Frontend/src/app/navbar/navbar.component.html
+++ b/Frontend/src/app/navbar/navbar.component.html
@@ -15,5 +15,8 @@
         <li class="nav-item">
             <a class="nav-link" routerLink="/orders">My Orders</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/profile">Profile</a>
+        </li>
     </ul>
 </nav>
