--- a/Frontend/src/app/navbar/navbar.component.html
+++ b/Frontend/src/app/navbar/navbar.component.html
@@ -1,19 +1,36 @@
-<nav class="navbar navbar-dark bg-dark">
-    <ul class="nav">
-        <li class="nav-item">
-            <a class="nav-link" routerLink="/products">Home</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" routerLink="/about">About</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" routerLink="/contact">Contact</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" routerLink="/cart">Cart</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" routerLink="/orders">My Orders</a>
-        </li>
-    </ul>
-</nav>
+
+<header class="header" id="header">
+    <nav class="nav container">
+  
+      <div class="nav__toggle" id="nav-toggle">
+        <i class="ri-function-line"></i>
+      </div>
+  
+      <div class="nav__menu" id="nav-menu">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link active-link" routerLink="/homepage">Home</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" routerLink="/products">Products</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" routerLink="/about">About</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" routerLink="/contact">Contact</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" routerLink="/cart">Cart</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" routerLink="/orders">My Orders</a>
+          </li>
+        </ul>
+  
+        <div class="nav__close" id="nav-close">
+          <i class="ri-close-line"></i>
+        </div>
+      </div>
+    </nav>
+</header>
