--- a/Frontend/src/app/product/product.component.html
+++ b/Frontend/src/app/product/product.component.html
@@ -1,10 +1,39 @@
-<div class="card" *ngFor="let product of products">
+<!-- <div class="card" *ngFor="let product of products">
     <img [src]="product.productImage" class="card-img-top" alt="Product Image">
     <div class="card-body">
       <h5 class="card-title">{{ product.productName }}</h5>
       <p class="card-text">{{ product.productDescription }}</p>
       <p class="card-text">Price: ${{ product.price }}</p>
+      <p></p>
       <button (click)="addToCart(product.id)" class="btn btn-primary">Add to Cart</button>
     </div>
+</div> -->
+<section class="sectionJumper section">
+  <div class="section-jumper section-jumper- section-jumper--light section-jumper--sticky section-jumper--initialized">
+    <div class="section-jumper__main">
+      <ul>
+        <li *ngFor="let category of categories" (click)="getProductsByCategory(category)">
+          {{ category.categoryName }}
+        </li>
+      </ul>
+    </div>
   </div>
-  
+</section>
+
+<section class="products section" id="products" *ngIf="selectedCategory">
+  <h2 class="selected-category__name">{{ selectedCategory.categoryName }} Products</h2>
+  <div class="products__container container grid">
+    <article class="products__card" *ngFor="let product of products.slice(0, 6)">
+      <div class="products__content">
+        <!-- <img [src]="product.productImage" class="products__img" alt="Product Image"> -->
+
+        <h3 class="products__title">{{ product.productName }}</h3>
+        <span class="products__price">Rp. {{ product.price }}</span>
+
+        <button (click)="addToCart(product.id)" class="button button--flex products__button">
+          <fa-icon [icon]="faShoppingCart"></fa-icon>
+        </button>
+      </div>
+    </article>
+  </div>
+</section>
