--- a/Frontend/src/app/cart/cart.component.html
+++ b/Frontend/src/app/cart/cart.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1 class="mt-5 mb-3">Cart (4)</h1>
+    <h1 class="mt-5 mb-3">Cart</h1>
     <div class="row">
         <div class="col-lg-8">
             <!-- ADDRESS BOX -->
@@ -7,11 +7,11 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-10">
-                            <h3 class="mb-3">Jennie Kim</h3>
+                            <h3 class="mb-3">{{ name }}</h3>
                             <p>{{ shippingAddress }}</p>
                         </div>
                         <div class="col-md-2">
-                            <button type="button" class="btn btn-primary">Change Address</button>
+                            <button class="button">Change Address</button>
                         </div>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
                     
                     <hr>
                     <p class="mb-4">Total: {{'Rp. ' + totalPrice}}</p>
-                    <button type="button" class="btn btn-primary btn-lg btn-block" (click)="checkout()">Checkout</button>
+                    <button type="button" class="button btn-primary btn-lg btn-block" (click)="checkout()">Checkout</button>
                 </div>
             </div>
         </div>
