--- a/Frontend/src/app/navbar/navbar.component.css
+++ b/Frontend/src/app/navbar/navbar.component.css
@@ -87,7 +87,8 @@ img {
   top: 0;
   left: 0;
   z-index: 100;
-  background: transparent;
+  background: #ffffff;
+  transition: background-color 0.3s #939292;
 }
 
 /*=============== NAV ===============*/
