--- a/Frontend/src/app/order/order.component.html
+++ b/Frontend/src/app/order/order.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container">
   <h1 class="mb-3">My Orders</h1>
   <div *ngFor="let order of orders" class="mb-4">
       <div class="card">
