--- a/Frontend/src/app/navbar/navbar.component.css
+++ b/Frontend/src/app/navbar/navbar.component.css
@@ -93,7 +93,7 @@ img {
 
 /*=============== NAV ===============*/
 .nav {
-  height: 3rem;
+  height: 3.5rem;
   padding-bottom: 1rem;
   display: flex;
   justify-content: space-between;
@@ -126,6 +126,7 @@ img {
 .nav__list {
   display: flex;
   /* flex-direction: column; */
+  margin-top: 1rem;
   justify-content: left;
   align-items: center;
   row-gap: 1rem;
