--- a/Frontend/src/app/navbar/navbar.component.html
+++ b/Frontend/src/app/navbar/navbar.component.html
@@ -26,6 +26,9 @@
           <li class="nav__item">
             <a class="nav__link" routerLink="/orders">My Orders</a>
           </li>
+          <li class="nav__item">
+            <a class="nav__link" routerLink="/profile">Profile</a>
+          </li>
         </ul>
   
         <div class="nav__close" id="nav-close">
