--- a/Frontend/src/app/navbar/navbar.component.css
+++ b/Frontend/src/app/navbar/navbar.component.css
@@ -91,6 +91,40 @@ img {
   transition: background-color 0.3s #939292;
 }
 
+/*=============== DROPDOOWN NAV======*/
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-toggle::after {
+  content: '\25BC'; /* Panah bawah untuk menunjukkan dropdown */
+  padding-left: 5px;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+.dropdown-item {
+  padding: 10px;
+  text-decoration: none;
+  color: #333;
+  display: block;
+}
+
+.dropdown-item:hover {
+  background-color: #ddd;
+}
+
 /*=============== NAV ===============*/
 .nav {
   height: 3rem;
