--- a/Frontend/src/app/order/order.component.css
+++ b/Frontend/src/app/order/order.component.css
@@ -2,4 +2,17 @@
     margin-top:5rem;
     margin-left: 1.5rem;
     margin-right: 1.5rem;
+    width: 85%;
+    padding-left: 170px;
+}
+
+.title {
+    color: #e2d0ad;
+    font-weight: bold;
+  }
+
+.card-title {
+    color: #3e3b35;
+    font-weight: bold;
+    font-size: 14px;
 }
