--- a/Frontend/src/app/profile/edit-profile/edit-profile.component.html
+++ b/Frontend/src/app/profile/edit-profile/edit-profile.component.html
@@ -28,7 +28,7 @@
           <div class="mb-3">
             <div class="d-flex justify-content-between">
               <button type="button" class="btn btn-secondary" (click)="navigateToProfile()">Cancel</button>
-              <button type="submit" class="button btn-primary">Save</button>
+              <button type="submit" class="button btn-primary" (click)="editUserProfile()">Save</button>
             </div>
           </div>
         </form>
