--- a/Frontend/src/app/master-product/master-product.component.html
+++ b/Frontend/src/app/master-product/master-product.component.html
@@ -64,7 +64,7 @@
 <div class="container mt-5" *ngIf="!!is['edit'] || !!is['create']">
   <div class="card">
     <div class="card-header">
-      <h3>Edit Profile</h3>
+      <h3>Product Edit</h3>
     </div>
     <div class="card-body">
       <form (submit)="onSubmit()">
@@ -73,13 +73,19 @@
           <input type="text" id="name" name="name" [(ngModel)]="formProduct.productName" class="form-control">
         </div>
 
-        <div class="mb-3">
+        <!-- <div class="mb-3">
           <label for="email" class="form-label">Category</label>
           <input [ngbTypeahead]="search" [inputFormatter]="formatter" [resultFormatter]="formatter" [editable]="false" type="text" id="category" name="category" [(ngModel)]="formProduct.category" class="form-control" [disabled]="is['edit']">
-        </div>
-
+        </div> -->
         <div class="mb-3">
-          <label for="email" class="form-label">Image</label>
+          <label for="category" class="form-label">Category</label>
+          <select id="category" name="category" [(ngModel)]="formProduct.category" class="form-select" [disabled]="is['edit']">
+            <option *ngFor="let category of categories" [value]="category.id">{{ category.categoryName }}</option>
+          </select>
+        </div>        
+        
+        <div class="mb-3">
+          <label for="image" class="form-label">Image</label>
           <input type="text" id="image" name="image" [(ngModel)]="formProduct.productImage" class="form-control" [disabled]="is['edit']">
         </div>
 
