--- a/Frontend/src/app/master-product/master-product.component.html
+++ b/Frontend/src/app/master-product/master-product.component.html
@@ -73,10 +73,6 @@
           <input type="text" id="name" name="name" [(ngModel)]="formProduct.productName" class="form-control">
         </div>
 
-        <!-- <div class="mb-3">
-          <label for="email" class="form-label">Category</label>
-          <input [ngbTypeahead]="search" [inputFormatter]="formatter" [resultFormatter]="formatter" [editable]="false" type="text" id="category" name="category" [(ngModel)]="formProduct.category" class="form-control" [disabled]="is['edit']">
-        </div> -->
         <div class="mb-3">
           <label for="category" class="form-label">Category</label>
           <select id="category" name="category" [(ngModel)]="formProduct.category" class="form-select" [disabled]="is['edit']">
@@ -84,10 +80,14 @@
           </select>
         </div>        
         
-        <div class="mb-3">
+        <!-- <div class="mb-3">
           <label for="image" class="form-label">Image</label>
           <input type="text" id="image" name="image" [(ngModel)]="formProduct.productImage" class="form-control" [disabled]="is['edit']">
-        </div>
+        </div> -->
+        <div class="mb-3">
+          <label for="image" class="form-label">Image</label>
+          <input type="file" id="image" name="image" (change)="onImageSelected($event)" class="form-control" [disabled]="is['edit']">
+        </div>        
 
         <div class="mb-3">
           <label for="address" class="form-label">Description</label>
