--- a/Frontend/src/app/auth/login/login.component.css
+++ b/Frontend/src/app/auth/login/login.component.css
@@ -59,3 +59,13 @@ form button:hover {
 .text-center a {
     color: hsl(16, 11%, 38%);
 }
+
+a {
+    color: #caba9a;
+}
+
+label {
+    color: #e2d0ad;
+    font-size: 16px;
+    font-weight: bold;
+}
