--- a/Frontend/src/app/auth/register/register.component.html
+++ b/Frontend/src/app/auth/register/register.component.html
@@ -17,19 +17,20 @@
           <div class="col-lg-6 mb-5 mb-lg-0">
             <h1 class="my-5 display-3 fw-bold ls-tight">
               Register <br />
-              <span class="text-primary">Your Account</span>
+              <span class="account">Your Account</span>
             </h1>
           </div>
 
           <div class="col-lg-6 mb-5 mb-lg-0">
             <div class="card">
-              <div class="card-body py-5 px-md-5">
+              <div class="card-body py-3 px-md-5">
                 <div class="container">
-                  <h2>Register</h2>
+                  <h2 class="mb-3">Register</h2>
                   <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
                     <div class="row">
                       <div class="col-md-6 mb-4">
                         <div class="form-outline">
+                          <label class="form-label" for="name">Name</label>
                           <input type="text" id="name" formControlName="name" name="name" class="form-control" placeholder="Name" required />
                           <div *ngIf="registrationForm.get('name')?.hasError('required') && registrationForm.get('name')?.touched" class="alert alert-danger">
                             Name is required.
@@ -41,6 +42,7 @@
                       </div>
                       <div class="col-md-6 mb-4">
                         <div class="form-outline">
+                          <label class="form-label" for="email">Email</label>
                           <input type="email" id="email" formControlName="email" name="email" class="form-control" placeholder="Email" required> 
                           <div *ngIf="registrationForm.get('email')?.hasError('required') && registrationForm.get('email')?.touched" class="alert alert-danger">
                             Email is required.
@@ -53,6 +55,7 @@
                     </div>
                   
                     <div class="form-outline mb-4">
+                      <label class="form-label" for="address">Address</label>
                       <input type="text" id="address" formControlName="address" name="address" class="form-control" placeholder="Address" required>
                       <div *ngIf="registrationForm.get('address')?.hasError('required') && registrationForm.get('address')?.touched" class="alert alert-danger">
                         Address is required.
@@ -60,6 +63,7 @@
                     </div>
                   
                     <div class="form-outline mb-4">
+                      <label class="form-label" for="phone">Password</label>
                       <input type="password" id="password" formControlName="password" name="password" class="form-control" placeholder="Password" required>
                       <div *ngIf="registrationForm.get('password')?.hasError('required') && registrationForm.get('password')?.touched" class="alert alert-danger">
                         Password is required.
@@ -74,7 +78,7 @@
                   
                     <div class="text-center">
                       <button type="submit" class="btn btn-primary btn-block mb-4" style="margin: 5px;">
-                        Sign in
+                        Register
                       </button>
                     </div>
                   </form>
