fix() : image url, navbar(authorization)

--- a/Frontend/src/app/profile/profile.component.html
+++ b/Frontend/src/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="!!user">
   <h1 class="mb-3">Hello, {{ user.name }}!</h1>
   <div class="card">
     <div class="card-body">
