--- a/Frontend/src/app/product/product.component.html
+++ b/Frontend/src/app/product/product.component.html
@@ -12,6 +12,9 @@
   <div class="section-jumper section-jumper- section-jumper--light section-jumper--sticky section-jumper--initialized">
     <div class="section-jumper__main">
       <ul>
+        <li (click)="selectedCategory = null; getProduct()">
+          <a>All</a>
+        </li>
         <li *ngFor="let category of categories" (click)="getProductsByCategory(category)">
           <a>{{ category.categoryName }}</a>
         </li>
@@ -20,12 +23,12 @@
   </div>
 </section>
 
-<section class="products section" id="products" *ngIf="selectedCategory">
-  <h2 class="selected-category__name">{{ selectedCategory.categoryName }} Products</h2>
+<section class="products section" id="products">
+  <h2 class="selected-category__name" >{{ selectedCategory?.categoryName || "All" }} Products</h2>
   <div class="products__container container grid">
     <article class="products__card" *ngFor="let product of products.slice(0, 6)">
       <div class="products__content">
-        <!-- <img [src]="product.productImage" class="products__img" alt="Product Image"> -->
+        <img [src]="product.productImage" class="products__img" alt="Product Image">
 
         <h3 class="products__title">{{ product.productName }}</h3>
         <span class="products__price">Rp. {{ product.price }}</span>
