(fix): seeder, images display

--- a/Frontend/src/app/cart/cart.component.html
+++ b/Frontend/src/app/cart/cart.component.html
@@ -25,7 +25,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-2">
-                                <img [src]="item.Product.productImage" alt="Product Image" class="img-thumbnail" (error)="handleMissingImage($event)">
+                                <img [src]="item." alt="Product Image" class="img-thumbnail" (error)="handleMissingImage($event)">
                             </div>
                             <div class="col-md-10">
                                 <h3 class="mb-2">{{ item.Product.productName }}</h3>
