--- a/Frontend/src/app/master-product/master-product.component.html
+++ b/Frontend/src/app/master-product/master-product.component.html
@@ -64,7 +64,7 @@
 <div class="container mt-5" *ngIf="!!is['edit'] || !!is['create']">
   <div class="card">
     <div class="card-header">
-      <h3>Product Edit</h3>
+      <h3>Product Add</h3>
     </div>
     <div class="card-body">
       <form (submit)="onSubmit()">
